# mechanistic-bench

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
analysis/: build_unified_table.py  depth_sweep.csv  drop_family_ablation.csv  drop_family_ablation.py  figure_q1_ablation.py  figure_q2_controlled_depth.py  figure_q2_depth.py  figure_q3_multimodal.py  figure_q4_autoencoding.py  figure_rank_correlation.py  lm_ce.csv  primitive_taxonomy.py  run_depth_sweep.py  unified_1m.csv
analysis/lr_sensitivity/: lr_analysis.py  lr_suite_means.csv  lr_sweep.csv  run_lr_sweep.py
configs/: tasks_10m_hard.json
configs/lm/: mechbench-10m.yaml
configs/lm/150m/: _base.md  headwise_alt_attn_mamba.yaml  mamba.yaml
configs/lm/scale_10m/: mechbench.yaml
configs/lm/scale_150m/: _base.md  alt_attn_mamba.yaml  attn.yaml
configs/lm/scale_150m_seq4096/: alt_attn_mamba2.yaml  attn.yaml  mamba2.yaml
configs/lm/scale_50m_seq4096/: alt_attn_mamba2.yaml  attn.yaml  headwise_mamba2.yaml  mamba2.yaml
configs/lm/scale_50m_seq8192/: alt_attn_mamba2.yaml  attn.yaml  headwise_mamba2.yaml  mamba2.yaml
configs/scale_10m/: tasks.yaml
configs/scale_10m/models/: alt_attn_mamba.yaml  alt_attn_mamba2.yaml  alt_attn_stu.yaml  headwise.yaml  headwise_mamba2.yaml  headwise_stu.yaml  lstm.yaml  mamba.yaml  mamba2.yaml  stu.yaml  transformer.yaml
configs/scale_1m/: alt_attn_mamba.yaml  headwise.yaml  lstm.yaml  mamba.yaml  mamba2.yaml  stu.yaml  tasks.yaml  transformer.yaml
configs/scale_1m/models/: alt_attn_mamba.yaml  alt_attn_mamba2.yaml  alt_attn_stu.yaml  headwise.yaml  headwise_mamba2.yaml  headwise_stu.yaml  lstm.yaml  mamba.yaml  mamba2.yaml  stu.yaml  transformer.yaml
docs/: COMPUTE.md  ROADMAP.md  index.html
figures/: alt_attn_stu_10m.csv  alt_attn_stu_1m.csv  alt_attn_stu_report.md  headwise_stu_10m.csv  headwise_stu_1m.csv  headwise_stu_report.md  mamba2_hybrids_10m.csv  mamba2_hybrids_1m.csv  mamba2_hybrids_report.md
figures/seed_sweep/: seed_sweep_tokacc.csv
results/: extended_evals.csv  extended_evals.md  seq4096_150m_comparison.md  seq4096_50m_comparison.md  seq8192_50m_comparison.md
results/raw/: 150m-alt-attn-mamba2.json  150m-attn.json  150m-mamba2.json  50m-alt-attn-mamba2.json  50m-attn.json  50m-headwise-mamba2.json  50m-mamba2.json
scripts/: aggregate_extended_evals.py  aggregate_results.py  alt_attn_stu_report.py  eval_lm.py  eval_lm_extended.py  headwise_stu_report.py  mamba2_hybrids_report.py  match_params.py  plot_10m_hard.py  plot_training.py  run.py  run_extended_evals.sh  run_suite.py  seed_and_extras_figures.py  sweep_10m_hard.py  train.py  train_lm.py  tune_150m.py  validate_10m_hard.py  verify_150m.py
src/mechbench/: __init__.py  aliases.py  exceptions.py  tokenizer.py  util.py
src/mechbench/configs/: __init__.py  presets.py  (+1 more)
tests/: test_downstream_smoke.py  test_lm_data.py  test_modality_tasks.py  test_model.py  test_tasks.py  test_tokenizer.py
(+58 files in other folders)
