[project]
name = "mechanistic-bench"
version = "0.1.0"
description = "Mechanistic evaluation suite for sequence modeling architectures."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "mechanistic-bench authors" }]

dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "einops>=0.8",
    "omegaconf>=2.3",
    "rich>=13.9",
    "wandb>=0.19",
    "tqdm>=4.66",
    "pandas>=2.2",
    "torchmetrics>=1.9.0",
    "scikit-learn>=1.7.2",
    "datasets>=4.8.4",
    "cached-path>=1.8.10",
]

[project.optional-dependencies]
flash = [
    # flash-attn needs a separate install step (`uv pip install flash-attn --no-build-isolation`)
    # declared here so `uv sync --extra flash` attempts it.
    "flash-attn>=2.6; platform_system == 'Linux'",
]
mamba = [
    "mamba-ssm>=2.2; platform_system == 'Linux'",
    "causal-conv1d>=1.4; platform_system == 'Linux'",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mechbench"]

[tool.uv]
# flash-attn requires torch to be installed first; users should run:
#   uv sync
#   uv pip install flash-attn --no-build-isolation
# to avoid build-isolation issues.

[tool.ruff]
line-length = 110
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
