[project]
name = "mechanistic-bench"
version = "0.1.0"
description = "Mechanistic evaluation suite for sequence modeling architectures."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "mechanistic-bench authors" }]

dependencies = [
    "torch>=2.9,<2.10",
    "numpy>=1.26",
    "einops>=0.8",
    "omegaconf>=2.3",
    "rich>=13.9",
    "wandb>=0.19",
    "tqdm>=4.66",
    "pandas>=2.2",
]

[project.optional-dependencies]
flash = [
    "flash-attn",
]
mamba = [
    "mamba-ssm",
    "causal-conv1d",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mechbench"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
mamba-ssm = { url = "https://github.com/state-spaces/mamba/releases/download/v2.3.1/mamba_ssm-2.3.1+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
causal-conv1d = { url = "https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.6.1.post4/causal_conv1d-1.6.1+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }

[tool.ruff]
line-length = 110
target-version = "py310"
